--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ body {
 .info i { color: var(--gold); margin-right: 10px; width: 20px; }
 .social-links-footer { margin-top: 20px; }
 .social-links-footer a { color: var(--gold); font-size: 1.5rem; margin-right: 15px; text-decoration: none; }
+.map-container {
+    width: 100%;
+    max-width: 1200px; /* Para que en computadoras muy grandes no sea gigante */
+    margin: 0 auto;
+}
+
 
 
 
